header-btn-footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="nav-bar">
@@ -15,19 +17,19 @@
                 <a href="#"><img src="./Assets/Images/group-2.svg" alt=""></a>
                 <h1>[Events]</h1>
             </div>
-                <lu class="liste">
-                    <li></i><a href="#">Search</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">More</a></li>
-                </lu>
+            <ul class="liste">
+                <li><a href="#">Search</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
         </nav>
         <div class="corps-header">
-            <h1>[EVENT]...YOUR GATEWAY TO CONNECT WITYH EVENTS AROUND YOUR AREA</h1>
+            <h3>[EVENT]...YOUR GATEWAY TO CONNECT WITYH EVENTS AROUND YOUR AREA</h3>
             <form>
-                <h2>SEARCH EVENT NEARBY</h2>
-                <input type="search" name="search" id="recherche" placeholder="Insert you location here">
-                <input type="submit" value="SEARCH">
+                <p>SEARCH EVENT NEARBY</p>
+                <input type="search" name="search" id="rechercher" placeholder="Insert you location here">
+                <input type="submit" value="SEARCH" id="search">
             </form>
             <button type="button">How It Works</button>
         </div>
@@ -35,22 +37,32 @@
     <main>
         <section class="separation-blanc">
             <h2>[Event] Works in four simple steps.</h2>
-            <div class="grid-items">
+            <div class="grid-items01">
                 <div class="item">
-                    <p>1-Locate</p>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good quality time with people and click on search.</p>
+                    <img src="./Assets/Icones/locate_icon.svg" alt="">
+                    <h3>1-Locate</h3>
+                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
+                        quality time with people and click on search.</p>
                 </div>
                 <div class="item">
-                    <p>1-Locate</p>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good quality time with people and click on search.</p>
+                    <img src="./Assets/Icones/confirm_icon.svg" alt="">
+                    <h3>1-Locate</h3>
+                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
+                        quality time with people and click on search.</p>
+                </div>
+            </div>
+            <div class="grid-items02">
+                <div class="item">
+                    <img src="./Assets/Icones/go_icon.svg" alt="">
+                    <h3>1-Locate</h3>
+                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
+                        quality time with people and click on search.</p>
                 </div>
                 <div class="item">
+                    <img src="./Assets/Icones/haveagoodtime_icon.svg" alt="">
                     <p>1-Locate</p>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good quality time with people and click on search.</p>
-                </div>
-                <div class="item">
-                    <p>1-Locate</p>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good quality time with people and click on search.</p>
+                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
+                        quality time with people and click on search.</p>
                 </div>
             </div>
         </section>
@@ -58,9 +70,59 @@
         <section class="separation-red">
             <div class="text">
                 <h3>[Events] near you</h3>
-                Every month
+                <p>Every month a new you might find [Events] near you and enjoy the
+                    company with people whom you can share mutual interests</p>
+            </div>
+            <div class="image">
+                <img src="./Assets/Images/group-2.jpg" alt="">
+            </div>
+        </section>
+        <section class="separation-gray">
+            <div class="text">
+                <h3>[Events] near you</h3>
+                <p>Every month a new you might find [Events] near you and enjoy the
+                    company with people whom you can share mutual interests</p>
+                    <button type="button">Find a [Events] </button>
+            </div>
+            <div class="image">
+                <img src="./Assets/Images/group-3.jpg" alt="">
+            </div>
+        </section>
+        <section class="separation-blue">
+            <div class="text">
+                <h3>[Events] near you</h3>
+                <p>Every month a new you might find [Events] near you and enjoy the
+                    company with people whom you can share mutual interests</p>
+                    <button type="button">Learn more about [Events]</button>
+            </div>
+            <div class="image">
+                <img src="./Assets/Images/group-4.jpg" alt="">
             </div>
         </section>
     </main>
+    <footer class="foot">
+        <div class="left">
+            <a href="#">HOME</a>
+            <a href="#">SEARCH</a>
+            <a href="#">ABOUT US</a>
+            <a href="#">ADVERTISE</a>
+        </div>
+        <div class="cercle-position">
+            <img src="./Assets/Icones/mapsnavbar_icon.svg" alt="">
+        </div>
+        <div class="rigth">
+            <a href="#">FACEBOOK</a>
+            <a href="#">TWITTER</a>
+            <a href="#">INSTAGRAM</a>
+            <a href="#">BLOG</a>
+        </div>
+
+        <!-- Subscribe -->
+        <!-- <form class="foot-btn">
+            <input type="search" name="search" id="rechercher" placeholder="Insert your e-mail here">
+            <input type="submit" value="send">
+        </form> -->
+    </footer>
 </body>
+
 </html>
