--- a/index.html
+++ b/index.html
@@ -2,127 +2,187 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event</title>
-    <!-- link css -->
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Event</title>
+  <!-- link css -->
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
-    <header>
-        <nav class="nav-bar">
-            <div class="logo">
-                <a href="#"><img src="./Assets/Images/group-2.svg" alt=""></a>
-                <h1>[Events]</h1>
-            </div>
-            <ul class="liste">
-                <li><a href="#">Search</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">More</a></li>
-            </ul>
-        </nav>
-        <div class="corps-header">
-            <h3>[EVENT]...YOUR GATEWAY TO CONNECT WITYH EVENTS AROUND YOUR AREA</h3>
-            <form>
-                <p>SEARCH EVENT NEARBY</p>
-                <input type="search" name="search" id="rechercher" placeholder="Insert you location here">
-                <input type="submit" value="SEARCH" id="search">
-            </form>
-            <button type="button">How It Works</button>
+  <header>
+    <nav class="nav-bar">
+      <div class="logo">
+        <a href="./index.html"><img src="./Assets/Images/group-2.svg" alt="" /></a>
+        <h1>[Events]</h1>
+      </div>
+      <ul class="liste">
+        <li>
+          <img src="./Assets/Icones/search_icon.svg" alt="" id="icone" />
+          <a href="./search.html">Search</a>
+        </li>
+        <li>
+          <img src="./Assets/Icones/about_icon.svg" alt="" id="icone" />
+          <a href="./about/about.html">About</a>
+        </li>
+        <li>
+          <img src="./Assets/Icones/blog_icon.svg" alt="" id="icone" />
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <img src="./Assets/Icones/more_icon.svg" alt="" id="icone" />
+          <a href="#">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="corps-header">
+      <h3>[EVENT]...YOUR GATEWAY TO CONNECT WITYH EVENTS AROUND YOUR AREA</h3>
+      <form>
+        <p>SEARCH EVENT NEARBY</p>
+        <input type="search" name="search" id="rechercher" placeholder="Insert you location here" />
+        <input type="submit" value="SEARCH" id="search" />
+      </form>
+      <button type="button">How It Works</button>
+    </div>
+  </header>
+  <main>
+    <section class="separation-blanc">
+      <h2>[Event] Works in four simple steps.</h2>
+      <div class="grid-items01">
+        <div class="item">
+          <img src="./Assets/Icones/locate_icon.svg" alt="" />
+          <h3>1-Locate</h3>
+          <p>
+            It's simple, on [Events] homepage, enter the name of the location
+            you want to spend some good quality time with people and click on
+            search.
+          </p>
         </div>
-    </header>
-    <main>
-        <section class="separation-blanc">
-            <h2>[Event] Works in four simple steps.</h2>
-            <div class="grid-items01">
-                <div class="item">
-                    <img src="./Assets/Icones/locate_icon.svg" alt="">
-                    <h3>1-Locate</h3>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
-                        quality time with people and click on search.</p>
-                </div>
-                <div class="item">
-                    <img src="./Assets/Icones/confirm_icon.svg" alt="">
-                    <h3>1-Locate</h3>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
-                        quality time with people and click on search.</p>
-                </div>
-            </div>
-            <div class="grid-items02">
-                <div class="item">
-                    <img src="./Assets/Icones/go_icon.svg" alt="">
-                    <h3>1-Locate</h3>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
-                        quality time with people and click on search.</p>
-                </div>
-                <div class="item">
-                    <img src="./Assets/Icones/haveagoodtime_icon.svg" alt="">
-                    <p>1-Locate</p>
-                    <p>It's simple, on [Events] homepage, enter the name of the location you want to spend some good
-                        quality time with people and click on search.</p>
-                </div>
-            </div>
-        </section>
+        <div class="item">
+          <img src="./Assets/Icones/confirm_icon.svg" alt="" />
+          <h3>1-Locate</h3>
+          <p>
+            It's simple, on [Events] homepage, enter the name of the location
+            you want to spend some good quality time with people and click on
+            search.
+          </p>
+        </div>
+      </div>
+      <div class="grid-items02">
+        <div class="item">
+          <img src="./Assets/Icones/go_icon.svg" alt="" />
+          <h3>1-Locate</h3>
+          <p>
+            It's simple, on [Events] homepage, enter the name of the location
+            you want to spend some good quality time with people and click on
+            search.
+          </p>
+        </div>
+        <div class="item">
+          <img src="./Assets/Icones/haveagoodtime_icon.svg" alt="" />
+          <h3>1-Locate</h3>
+          <p>
+            It's simple, on [Events] homepage, enter the name of the location
+            you want to spend some good quality time with people and click on
+            search.
+          </p>
+        </div>
+      </div>
+    </section>
 
-        <section class="separation-red">
-            <div class="text">
-                <h3>[Events] near you</h3>
-                <p>Every month a new you might find [Events] near you and enjoy the
-                    company with people whom you can share mutual interests</p>
-            </div>
-            <div class="image">
-                <img src="./Assets/Images/group-2.jpg" alt="">
-            </div>
-        </section>
-        <section class="separation-gray">
-            <div class="text">
-                <h3>[Events] near you</h3>
-                <p>Every month a new you might find [Events] near you and enjoy the
-                    company with people whom you can share mutual interests</p>
-                    <button type="button">Find a [Events] </button>
-            </div>
-            <div class="image">
-                <img src="./Assets/Images/group-3.jpg" alt="">
-            </div>
-        </section>
-        <section class="separation-blue">
-            <div class="text">
-                <h3>[Events] near you</h3>
-                <p>Every month a new you might find [Events] near you and enjoy the
-                    company with people whom you can share mutual interests</p>
-                    <button type="button">Learn more about [Events]</button>
-            </div>
-            <div class="image">
-                <img src="./Assets/Images/group-4.jpg" alt="">
-            </div>
-        </section>
-    </main>
-    <footer class="foot">
-        <div class="left">
-            <a href="#">HOME</a>
-            <a href="#">SEARCH</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">ADVERTISE</a>
-        </div>
-        <div class="cercle-position">
-            <img src="./Assets/Icones/mapsnavbar_icon.svg" alt="">
-        </div>
-        <div class="rigth">
-            <a href="#">FACEBOOK</a>
-            <a href="#">TWITTER</a>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">BLOG</a>
-        </div>
+    <!-- SEPARATION -->
+    <!-- RED -->
+    <div class="separation-red">
+      <div class="text">
+        <h3>[Event] near you</h3>
+        <br>
+        <p>Every moth a new you might [Events] near you and enjoy the company with people whom you can share mutual
+          interests</p>
+          <br>
+          <button>Find a [Events]</button>
+      </div>
+      <img src="./Assets/Images/group-2.jpg" alt="">
+    </div>
 
-        <!-- Subscribe -->
-        <!-- <form class="foot-btn">
-            <input type="search" name="search" id="rechercher" placeholder="Insert your e-mail here">
-            <input type="submit" value="send">
-        </form> -->
-    </footer>
+    <!-- GRAY -->
+    <div class="separation-gray">
+      <div class="text">
+        <h3>[Event] near you</h3>
+        <br>
+        <p>Every moth a new you might [Events] near you and enjoy the company with people whom you can share mutual
+          interests</p>
+          <br>
+          <button>Find a [Events]</button>
+      </div>
+      <img src="./Assets/Images/group-3.jpg" alt="">
+    </div>
+    <!-- BLUE -->
+    <div class="separation-blue">
+      <div class="text">
+        <h3>[Event] near you</h3>
+        <br>
+        <p>Every moth a new you might [Events] near you and enjoy the company with people whom you can share mutual
+          interests</p>
+          <br>
+          <button>Find a [Events]</button>
+      </div>
+      <img src="./Assets/Images/group-4.jpg" alt="">
+    </div>
+
+  </main>
+
+  <!-- FOOTER -->
+
+  <footer class="foot">
+    <div class="txt-btn">
+      <div class="left">
+        <a href="#">HOME</a>
+        <a href="#">SEARCH</a>
+        <a href="#">ABOUT US</a>
+        <a href="#">ADVERTISE</a>
+      </div>
+      <div class="cercle-position">
+        <img src="./Assets/Icones/mapsnavbar_icon.svg" alt="" />
+      </div>
+      <div class="rigth">
+        <a href="#">FACEBOOK</a>
+        <a href="#">TWITTER</a>
+        <a href="#">INSTAGRAM</a>
+        <a href="#">BLOG</a>
+      </div>
+    </div>
+    <div class="Sub-cont-about">
+      <form class="Sub">
+        <h3>Subsribe</h3>
+        <input type="search" name="search" id="rechercher2" placeholder="" />
+        <input type="button" value="send" id="send" />
+      </form>
+      <div class="cont">
+        <h3>Contact</h3>
+        <p>Have a question or sugestion?</p>
+        <p><a href="mailto:contact@events.com">contact@events.com</a></p>
+      </div>
+      <div class="about">
+        <h3>About</h3>
+        <p>
+          [Events] is an online platform that works to improve and increase
+          social life conections, when this nightmare that we are curently
+          living in is over <a href="#">learn more.</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+  <footer class="footer">
+    <div class="social-media">
+      <a href="#"><img src="/Assets/Icones/facebook_icon.svg" id="Reseau" alt="Facebook" /></a>
+      <a href="#"><img src="/Assets/Icones/twitter_icon.svg" id="Reseau" alt="Twitter" /></a>
+      <a href="#"><img src="/Assets/Icones/instagram_icon.svg" id="Reseau" alt="Instagram" /></a>
+      <a href="#"><img src="/Assets/Icones/tumblr_icon.svg " id="Reseau" alt="Tumblr" /></a>
+      <a href="#"><img src="/Assets/Icones/linkedin_icon.svg" id="Reseau" alt="Linkdin" /></a>
+    </div>
+    <p>&copy;2020 [Events],Inc.Allrigths reserved</p>
+  </footer>
 </body>
 
 </html>
